fix body scrollbar-y appearing when you open filter md-select

--- a/public/stylesheets/less/style.less
+++ b/public/stylesheets/less/style.less
@@ -55,3 +55,7 @@
 .rp-view {
 	overflow: hidden !important;
 }
+
+.rp-body {
+	overflow-y: hidden !important; 
+}
